[package]
name = "wasm-countup"
version = "0.1.0"
authors = ["soheyHashimoto <heyso1209@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
]